variable de base de datos

--- a/vhc/src/main/resources/application.properties
+++ b/vhc/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://usvphbh13wbfu0m2:Tnd2rCJkdgBRh5NvAB4l@bbqwljh0bqrga9joiklt-mysql.services.clever-cloud.com:3306/bbqwljh0bqrga9joiklt
-spring.datasource.username=usvphbh13wbfu0m2
-spring.datasource.password=Tnd2rCJkdgBRh5NvAB4l
+spring.datasource.url=jdbc:mysql://root:x7R3iimXKy7mvsEqBzTQ@containers-us-west-92.railway.app:7510/railway?useSSL=false&serverTimezona=UTC
+spring.datasource.username=root
+spring.datasource.password=x7R3iimXKy7mvsEqBzTQ
 
 jwt.secret = secret
 jwt.expiration = 3600
